# fractals

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: args_parser.h  fractal_config.h  shader_utils.h
include/glad/: glad.h
src/: main.cpp  mandelbrot.cu
src/kernels/: burningship.cu  julia.cu  mandelbrot.cu
src/utils/: args_parser.cpp  glad.cpp  shader_utils.cpp
